--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,28 @@
 page-home {
+    .bank-detail-card{
+        .bank-name{
+            font-size: 1.4rem;
+            font-weight: bold;
+        }
+        .bank-ifsc{
+            font-size: 1.1rem;
+            color: gray;
+        }
+        .bank-location{
+            align-items: center;
+            font-size: 1.1rem;
+            display: flex;
+            flex-flow: column;
+            justify-content: center;
+            white-space: nowrap;
+            div:first-child{
+                color: gray;
+            }
+        }
 
+        .bank-address{
+            font-size: 1.1rem;
+            color: #ff00008f;
+        }
+    }
 }
