added toast to favorites

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -9,6 +9,9 @@ page-home {
             ion-col{
                 padding:0;
             }
+            .favorite-icon{
+                color: red;
+            }
         }
         .bank-ifsc{
             font-size: 1.1rem;
