--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -8,8 +8,7 @@ page-home {
             width: 80%;
             margin: auto;
             text-align: right;
-            margin-right: 10px;
-            margin-top: 1rem;
+            
         }
 
         @media only screen and (max-width:768px) {
@@ -25,6 +24,8 @@ page-home {
         }
         .select-city{
             text-align: right;
+            margin-right: 10px;
+            margin-top: 1rem;
         }
         .bank-card{
             border:1px solid #ececec;
@@ -49,6 +50,7 @@ page-home {
                 font-size: 1.1rem;
                 color: gray;
                 padding:0;
+                padding-left: 5px;
             }
             .bank-location{
                 align-items: center;
