--- a/src/components/search-bank/search-bank.html
+++ b/src/components/search-bank/search-bank.html
@@ -1,5 +1,5 @@
 <!-- Generated template for the SearchBankComponent component -->
 <div class="search-parent">
-  <ion-searchbar (ionInput)="searchBank($event)" ion-col-9 placeholder = "Search banks"></ion-searchbar>
+  <ion-searchbar (ionInput)="searchBank($event)" ion-col-9 placeholder = "Search banks" #searchbar></ion-searchbar>
   <button ion-button (click)="selectFilter()" small outline ion-col-3 class="filter-type"> by {{this.filterType}} </button>
 </div>
