--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,3 +1,66 @@
 page-about {
 
+    .favorite-page{
+        background: #fafafa;
+        .page-margin{
+            width: 80%;
+            margin: auto;
+            text-align: right;
+            
+        }
+
+        @media only screen and (max-width:768px) {
+            .page-margin{
+                width: 100% !important;
+            }
+        }
+
+        @media screen and (min-width:769px) and (max-width:1200px){
+            .page-margin{
+                width:95% !important;
+            }
+        }
+    .bank-card{
+        border:1px solid #ececec;
+        box-shadow: none;
+        border-radius: 5px;
+    }
+    .bank-detail-card{
+        padding: 12px;
+        .bank-name{
+            display: flex;
+            align-items: center;
+            font-size: 1.4rem;
+            font-weight: bold;
+            ion-col{
+                padding:0;
+            }
+            .favorite-icon{
+                color: red;
+            }
+        }
+        .bank-ifsc{
+            font-size: 1.1rem;
+            color: gray;
+            padding:0;
+            padding-left: 5px;
+        }
+        .bank-location{
+            align-items: center;
+            font-size: 1.1rem;
+            display: flex;
+            flex-flow: column;
+            justify-content: center;
+            white-space: nowrap;
+            div:first-child{
+                color: gray;
+            }
+        }
+
+        .bank-address{
+            font-size: 1.1rem;
+            color: #ff00008f;
+        }
+    }
+}
 }
