--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,3 +1,13 @@
 page-contact {
+    .settings{
+        background: #fafafa;        
+    }
 
+    .page-size-input{
+        width: 80%;
+    margin: auto;
+    margin-top: 3.2rem;
+    border-radius: 5px;
+    border: 1px solid #ececec;
+    }
 }
