--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -50,7 +50,7 @@ page-home {
                 font-size: 1.1rem;
                 color: gray;
                 padding:0;
-                padding-left: 5px;
+                // padding-left: 5px;
             }
             .bank-location{
                 align-items: center;
