--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -43,7 +43,7 @@ page-about {
             font-size: 1.1rem;
             color: gray;
             padding:0;
-            padding-left: 5px;
+            // padding-left: 5px;
         }
         .bank-location{
             align-items: center;
