--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -71,6 +71,15 @@ page-about {
         font-size: 2.2rem;
         color: gray;
     }
+    .more-details{
+        display: flex;
+        justify-content: center;
+        button{
+            font-size: 10px;
+            margin: 0;
+            cursor: pointer;
+        }
+    }
 }
 
 
