--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -63,6 +63,15 @@ page-home {
                     color: gray;
                 }
             }
+            .more-details{
+                display: flex;
+                justify-content: center;
+                button{
+                    font-size: 10px;
+                    margin: 0;
+                    cursor: pointer;
+                }
+            }
     
             .bank-address{
                 font-size: 1.1rem;
