--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -23,9 +23,16 @@ page-home {
             }
         }
         .select-city{
-            text-align: right;
             margin-right: 10px;
             margin-top: 1rem;
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            div:first-child{
+                color: gray;
+                font-size: 1.7rem;
+                margin-right: 5px;
+            }
         }
         .bank-card{
             border:1px solid #ececec;
